# MomShell

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  PROGRESS.md  README.md  SECURITY.md  SKILL.md  docker-compose.yml  new_ui.txt  nginx.conf  pyproject.toml  requirements.txt  sonar-project.properties
backend/: .dockerignore  .env.example  Dockerfile  Makefile  go.mod  go.sum  pyproject.toml  requirements.txt
backend/.omc/state/: agent-replay-2866b7f0-9e67-43ae-895e-fb0782611bca.jsonl  idle-notif-cooldown.json  subagent-tracking.json
backend/app/: main.py
backend/app/core/: config.py
backend/app/schemas/: exercise.py  feedback.py  progress.py
backend/app/services/: verification.py  web_search.py
backend/app/templates/: admin.html  index.html
backend/cmd/server/: main.go
backend/internal/admin/: admin.html  embed.go
backend/internal/config/: config.go  config_test.go
backend/internal/database/: database.go  migrate.go
backend/internal/dto/: achievement.go  admin.go  answer.go  auth.go  chat.go  comment.go  common.go  echo.go  future_letter.go  perk_card.go  photo.go  question.go  shell_gift.go  tag.go  task.go  user.go  whisper.go
backend/internal/fileutil/: photo.go
backend/internal/handler/: admin.go  answer.go  auth.go  chat.go  comment.go  echo.go  interaction.go  perk_card.go  photo.go  question.go  shell_gift.go  task.go  user.go  whisper.go
backend/internal/middleware/: auth.go  cors.go  ratelimit.go  recovery.go  security.go  security_test.go  tokenblacklist.go  tokenblacklist_test.go
backend/internal/model/: achievement.go  achievement_test.go  chat.go  community.go  echo.go  future_letter.go  future_letter_test.go  interaction.go  perk_card.go  perk_card_test.go  photo.go  rag.go  rag_test.go  shell_gift.go  tag.go  task.go  user.go  whisper.go
backend/internal/repository/: achievement.go  admin.go  answer.go  chat.go  comment.go  constants.go  echo.go  future_letter.go  interaction.go  perk_card.go  photo.go  question.go  rag.go  shell_gift.go  sort.go  tag.go  task.go  user.go  whisper.go
backend/internal/router/: router.go
backend/internal/scheduler/: photo_cleanup.go
backend/internal/service/: achievement.go  achievement_test.go  admin.go  auth.go  chat.go  community.go  community_ai.go  echo.go  perk_card.go  perk_card_test.go  photo.go  photo_ssrf_test.go  rag.go  rag_test.go  shell_gift.go  task.go  task_ai.go  task_ai_test.go  task_card.go  task_card_test.go  task_test.go  user.go  user_profile_test.go  whisper.go  whisper_letter.go  whisper_letter_test.go
backend/pkg/firecrawl/: client.go
backend/scripts/: add_dad_mode_2_0_tables.py  create_admin.py
(+490 files in other folders)
